add path for styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": "src",
     "paths": {
       "@server/*": ["../server/*"],
-      "@app/*": ["*"]
+      "@app/*": ["*"],
+      "@styles/*": ["../src/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
