--- a/package.json
+++ b/package.json
@@ -85,10 +85,10 @@
     "reflect-metadata": "0.1.13",
     "secure-random-password": "0.2.3",
     "semver": "7.5.2",
-    "sqlite3": "5.1.5",
+    "sqlite3": "5.1.4",
     "swagger-ui-express": "4.6.2",
     "swr": "2.0.4",
-    "typeorm": "0.3.21-dev.e7649d2",
+    "typeorm": "0.3.12",
     "web-push": "3.5.0",
     "winston": "3.8.2",
     "winston-daily-rotate-file": "4.7.1",
