--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "baseUrl": "src",
     "paths": {
       "@server/*": ["../server/*"],
-      "@app/*": ["*"],
-      "@styles/*": ["../src/styles/*"]
+      "@app/*": ["*"]
     }
   },
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
