--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "gravatar-url": "3.1.0",
     "intl": "1.2.5",
     "lodash": "4.17.21",
-    "next": "13.5.0",
+    "next": "14.2.5",
     "node-cache": "5.1.2",
     "node-gyp": "9.3.1",
     "node-schedule": "2.1.1",
@@ -88,7 +88,7 @@
     "sqlite3": "5.1.4",
     "swagger-ui-express": "4.6.2",
     "swr": "2.0.4",
-    "typeorm": "0.3.12",
+    "typeorm": "0.3.21-dev.e7649d2",
     "web-push": "3.5.0",
     "winston": "3.8.2",
     "winston-daily-rotate-file": "4.7.1",
