--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goatflix-requests",
-  "version": "1.33.2",
+  "version": "1.33.3",
   "private": true,
   "scripts": {
     "dev": "nodemon -e ts --watch server --watch overseerr-api.yml -e .json,.ts,.yml -x ts-node -r tsconfig-paths/register --files --project server/tsconfig.json server/index.ts",
@@ -20,7 +20,8 @@
     "typecheck:client": "tsc --noEmit",
     "cypress:open": "cypress open",
     "cypress:prepare": "ts-node -r tsconfig-paths/register --files --project server/tsconfig.json server/scripts/prepareTestDb.ts",
-    "cypress:build": "yarn build && yarn cypress:prepare"
+    "cypress:build": "yarn build && yarn cypress:prepare",
+    "release": "bumpp"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "axios-rate-limit": "1.3.0",
     "bcrypt": "5.1.0",
     "bowser": "2.11.0",
+    "bumpp": "^9.4.1",
     "connect-typeorm": "1.1.4",
     "cookie-parser": "1.4.6",
     "copy-to-clipboard": "3.3.3",
