--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   buildx:
     name: Push branches and PRs
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: ${{ !github.event.repository.fork && !github.event.pull_request.head.repo.fork && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == 'goattech-development/goatflix-requests') }}
     steps:
       - name: Set up Docker Buildx
