--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     if: ${{ !github.event.repository.fork && !github.event.pull_request.head.repo.fork && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == 'goattech-development/goatflix-requests') }}
     steps:
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@4fd812986e6c8c2a69e18311145f9371337f27d4 # v3.4.0
+        uses: docker/setup-buildx-action@v3 # v3.4.0
       - name: Login to DockerHub
         uses: docker/login-action@v3.2.0
         with:
@@ -39,5 +39,5 @@ jobs:
             TAG=${{ steps.meta.outputs.version }}
             COMMIT_TAG=${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=local,src=./docker-cache
+          cache-to: type=local,dest=./docker-cache,mode=max
