initial setup of sentry

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@formatjs/intl-utils": "3.8.4",
     "@headlessui/react": "1.7.12",
     "@heroicons/react": "2.0.16",
+    "@sentry/node": "^8.20.0",
+    "@sentry/profiling-node": "^8.20.0",
     "@supercharge/request-ip": "1.2.0",
     "@svgr/webpack": "6.5.1",
     "@tanem/react-nprogress": "5.0.30",
@@ -90,7 +92,7 @@
     "sqlite3": "5.1.4",
     "swagger-ui-express": "4.6.2",
     "swr": "2.0.4",
-    "typeorm": "0.3.21-dev.e7649d2",
+    "typeorm": "0.3.20",
     "web-push": "3.5.0",
     "winston": "3.8.2",
     "winston-daily-rotate-file": "4.7.1",
