--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   main:
     name: Validate PR title
-    runs-on: [self-hosted, macOS]
+    runs-on: [self-hosted]
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
