ci: fix container action is only supported on Linux [skip ci]

--- a/.github/workflows/branch-deploy.yml
+++ b/.github/workflows/branch-deploy.yml
@@ -15,7 +15,7 @@ jobs:
   deploy:
     environment: secrets
     if: ${{ github.event.issue.pull_request }} # only run on pull request comments
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
 
     steps:
 
