--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -3,10 +3,10 @@ name: ci-dev
 on:
   push:
     branches:
-      - develop
+      - '!master'
   pull_request:
     branches:
-      - develop
+      - '!master'
 
 jobs:
   buildx:
