ci: update build-develop.yml [skip ci]
use branches-ignore: 

https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#running-your-pull_request-workflow-based-on-the-head-or-base-branch-of-a-pull-request

--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -2,11 +2,11 @@ name: ci-dev
 
 on:
   push:
-    branches:
-      - '!master'
+    branches-ignore:
+      - master
   pull_request:
     branches:
-      - '!master'
+      - master
 
 jobs:
   buildx:
