--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3'
 services:
   overseerr:
+    container_name: goatflix-requests-development
     build:
       context: .
       dockerfile: Dockerfile.local
@@ -10,3 +10,56 @@ services:
       - .:/app:rw,cached
       - /app/node_modules
       - /app/.next
+  
+  plex:
+    image: lscr.io/linuxserver/plex:latest
+    container_name: plex
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
+      - VERSION=docker
+    ports:
+      - 32400:32400
+      - 1900:1900/udp
+      - 8324:8324
+      - 32410:32410/udp
+      - 32412:32412/udp
+      - 32413:32413/udp
+      - 32414:32414/udp
+      - 32469:32469
+    volumes:
+      - ./testing/plex/config:/config
+      - ./testing/movies:/movies
+    restart: unless-stopped
+
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
+    environment:
+    - PUID=1000
+    - PGID=1000
+    - TZ=America/Los_Angeles
+    volumes:
+    - ./testing/radarr/config:/config
+    - ./testing/downloads:/downloads
+    - ./testing/movies:/movies
+    ports:
+    - 7878:7878
+    restart: unless-stopped
+
+  sabnzbd:
+    image: lscr.io/linuxserver/sabnzbd:latest
+    container_name: sabnzbd
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Los_Angeles
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./testing/sabnzbd/config:/config
+      - ./testing/downloads:/downloads
+    ports:
+      - 8080:8080
+      - 9090:9090
+    restart: unless-stopped
