--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "typecheck:client": "tsc --noEmit",
     "cypress:open": "cypress open",
     "cypress:prepare": "ts-node -r tsconfig-paths/register --files --project server/tsconfig.json server/scripts/prepareTestDb.ts",
-    "cypress:build": "yarn build && yarn cypress:prepare",
-    "release": "bumpp"
+    "cypress:build": "yarn build && yarn cypress:prepare"
   },
   "repository": {
     "type": "git",
